# cht

./: .env.example  ADVANCED_FEATURES.md  API_DOCS.md  BACKEND_COMPLETE.md  BACKEND_SETUP.md  BUILD_SUMMARY.md  CHANGELOG.md  FEATURES.md  FEATURES_CHECKLIST.md  FRONTEND_COMPLETE.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  README_COMPLETE.md  SUMMARY.md  app.js  blog.html  chat.html  contact.html  index.html  learn.html  next.config.mjs  package.json  pnpm-lock.yaml  profile.html  style.css  supabase.js  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/admin/stats/: route.ts
app/api/auth/login/: route.ts
app/api/auth/register/: route.ts
app/api/chats/: route.ts
app/api/messages/: route.ts
app/api/messages/reactions/: route.ts
app/api/messages/search/: route.ts
app/api/messages/send/: route.ts
app/api/polls/: route.ts
app/api/upload/: route.ts
app/api/users/profile/: route.ts
app/api/users/verify/: route.ts
app/api/video-calls/token/: route.ts
components/: active-call-screen.tsx  add-friend-modal.tsx  admin-dashboard.tsx  avatar.tsx  block-user-modal.tsx  chat-list-item.tsx  chat-window.tsx  close-chat-modal.tsx  delete-history-modal.tsx  devices-modal.tsx  disappearing-messages-modal.tsx  dm-actions-menu.tsx  friends-list.tsx  hidden-chat-modal.tsx  incoming-call-modal.tsx  invisible-mode-modal.tsx  media-gallery.tsx  message-bubble.tsx  message-input.tsx  message-reactions.tsx  message-search.tsx  notification-toast.tsx  poll.tsx  profile-modal.tsx  report-user-modal.tsx  settings-modal.tsx  sidebar.tsx  sticker-picker.tsx  success-modal.tsx  user-profile-view.tsx  user-status-modal.tsx  verification-modal.tsx  video-call.tsx  visibility-selector.tsx
hooks/: useApi.ts  useAuth.ts  useMessages.ts
lib/: api-client.ts  database.types.ts  mock-data.ts  store.ts  supabase.ts  types.ts  websocket.ts
messaging-platform/: Cargo.toml
messaging-platform/auth/: Cargo.toml
messaging-platform/auth/src/: main.rs
messaging-platform/client-sdk/: Cargo.toml
messaging-platform/client-sdk/src/: lib.rs
messaging-platform/client-sdk/src/crypto/: mod.rs
messaging-platform/encryption-service/: Cargo.toml
messaging-platform/encryption-service/src/: main.rs
messaging-platform/gateway/: Cargo.toml
messaging-platform/gateway/src/: main.rs
messaging-platform/messaging/: Cargo.toml
messaging-platform/messaging/src/: main.rs
messaging-platform/moderation/: Cargo.toml
messaging-platform/moderation/src/: main.rs
messaging-platform/presence/: Cargo.toml
messaging-platform/presence/src/: main.rs  presence.proto
messaging-platform/shared/: Cargo.toml
messaging-platform/shared/src/: lib.rs
messaging-platform/shared/src/crypto/: mod.rs
messaging-platform/shared/src/models/: mod.rs
scripts/: 01-init-schema.sql
