[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
jsonwebtoken = "9.0"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.6", features = ["headers"] }
tower-http = { version = "0.4", features = ["cors", "trace", "limit"] }
hyper = "0.14"
tokio-stream = "0.1"
futures = "0.3"
shared = { path = "../shared" }
