[package]
name = "messaging-client-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.0", features = ["serde"] }
x25519-dalek = "2.0"
rand = "0.8"
base64 = "0.21"
hex = "0.4"
tokio-rustls = "0.24"
