[package]
name = "messaging-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
rdkafka = { version = "0.35", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
futures = "0.3"
shared = { path = "../shared" }
scylla = { version = "0.11", features = ["ssl", "uuid"] }
