[package]
name = "moderation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["headers", "json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "2.0", features = ["derive"] }
thiserror = "1.0"
shared = { path = "../shared" }
rdkafka = { version = "0.35", features = ["cmake-build"] }
redis = { version = "0.23", features = ["tokio-comp"] }
